[package]
name = "vpnkitrc"
version = "0.1.0"
edition = "2021"
authors = ["next hat team <team@next-hat.com>"]
description = "VPNKitRC is a Rust library for interacting with VPNKit."
readme = "readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nxthat/vpnkitrc"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7.2", features = ["tokio"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
