[package]
name = "vpnkitrc"
version = "0.1.5"
edition = "2021"
authors = ["NextHat Team <team@next-hat.com>"]
description = "Rust library for interacting with VPNKit."
readme = "readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nxthat/vpnkitrc"

[lib]
bench = false

[features]
default = ["tokio"]
tokio = ["ntex/tokio"]
glommio = ["ntex/glommio"]
async-std = ["ntex/async-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
